# ozmium-web

./: .gitignore  Cargo.toml  PBL.html  chem.html  countdown.html  data.json  data_fetcher.py  glitched.css  helper.py  homepage.js  index.html  language_data.json  lorem.html  main.css  memorize.html  screen-style.css  screen.html  script.js  source.js  style.css  temp.js  test.html  user.js
PBL_content/: source.js  style.css
Screens/: rainscreen-script.js  rainscreen.html  screen-script.js
aurum/: Cargo.toml  helper.py  ticker.json
aurum/src/: cors.rs  main.rs  market.rs  stock.rs  ticker.rs
checklist/: amet.html  dolor.html  ipsum.html  lorem.html  sit.html
checklist/checklist_data/: a.json  b.json
checklist_backend/: Cargo.toml
checklist_backend/src/: main.rs
chronos/: index.html  login.html  test.html
chronos/backend/: Cargo.toml  passwords.json  users.json
chronos/backend/data/: passwords.json  users.json
chronos/backend/src/: account_handler.rs  cors.rs  login_info.rs  main.rs  task.rs  user.rs  utils.rs
chronos/scripts/: homepage.js  login.js  source.js  test.js
chronos/styles/: homepage.css  login.css  main.css
mantissa/: index.html
mantissa/backend/: passwords.json  stocks.json  users.json
mantissa/scripts/: homepage.js
mantissa/styles/: main.css
py_backend/: data.json  data_fetcher.py  pyvenv.cfg
scripts/: checklist.js  chem.js  countdown.js  memorize.js  redirect.js
src/: chem.rs  main.rs
styles/: checklist.css  chem.css  countdown.css  homepage.css  memorize.css  style.css
wolframite/: another.html
(+10 files in other folders)
